tests/error/negative_array2.gw
#! [contains] ArrayOutofBounds
var int[2][2] i;
<<< i[1][-1] >>>;
